--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,13 +25,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          rm -rf ./docker/compose/releases/download
           for i in $(curl "https://api.github.com/repos/docker/compose/releases" -s | grep "browser_download_url" | awk -F\" '{print $4}')
           do   
             p=${i#*com/}
